# GestorDeContrasena

./: .fletignore  .git_commit_msg.txt  .gitignore  ARCHITECTURE.md  README.md  USER_GUIDE.md  main.py  main_mobile.py  main_windows.py  pyproject.toml  requirements.txt  test_cli_client.py  test_client.py  test_client_pairing.json  test_dropdown.py  test_server.py  use_cases.md  vault.db  version_info.txt
FlFl/: main.py  requirements.txt  server.py
components/: category_tile.py  password_card.py  search_bar.py  strength_bar.py
database/: db_manager.py  models.py
docs/: ARCHITECTURE.md  MOBILE_DOCS.md  USER_GUIDE.md  WINDOWS_DOCS.md  use_cases.md
security/: auth.py  crypto.py
utils/: backup.py  categories.py  cleanup.py  clipboard_helper.py  helpers.py  logging_config.py  security_audit.py  sync_service.py
views/: audit_view.py  change_password.py  dashboard_view.py  generator_view.py  login_view.py  password_form.py  passwords_view.py  security_questions.py  sync_client_view.py  sync_host_view.py
